Add phpMyAdmin, MailHog, and HTTPS dev setup

--- a/infra/docker/nginx/default.conf
+++ b/infra/docker/nginx/default.conf
@@ -2,6 +2,16 @@ server {
     listen 80;
     server_name _;
 
+    return 301 https://$host:8443$request_uri;
+}
+
+server {
+    listen 443 ssl;
+    server_name _;
+
+    ssl_certificate /etc/ssl/localhost.pem;
+    ssl_certificate_key /etc/ssl/localhost-key.pem;
+
     root /var/www/backend/public;
     index index.php index.html;
 
