--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -21,18 +21,44 @@ services:
       DB_DATABASE: app_db
       DB_USERNAME: root
       DB_PASSWORD: root
+      MAIL_MAILER: smtp
+      MAIL_HOST: mailhog
+      MAIL_PORT: 1025
+      MAIL_USERNAME: null
+      MAIL_PASSWORD: null
+      MAIL_ENCRYPTION: null
     depends_on:
       - mysql
+      - mailhog
 
   nginx:
     image: nginx:1.25-alpine
     ports:
       - "8000:80"
+      - "8443:443"
     volumes:
       - ../apps/backend:/var/www/backend:ro
       - ./docker/nginx/default.conf:/etc/nginx/conf.d/default.conf:ro
+      - ./docker/nginx/ssl-certificates:/etc/ssl:ro
     depends_on:
       - backend
+
+  phpmyadmin:
+    image: phpmyadmin/phpmyadmin
+    environment:
+      PMA_HOST: mysql
+      PMA_PORT: 3306
+      PMA_ARBITRARY: 1
+    depends_on:
+      - mysql
+    ports:
+      - "8080:80"
+
+  mailhog:
+    image: mailhog/mailhog:latest
+    ports:
+      - "8025:8025"
+      - "1025:1025"
 
   frontend:
     profiles:
