--- a/infra/docker/nginx/default.conf
+++ b/infra/docker/nginx/default.conf
@@ -12,7 +12,7 @@ server {
     ssl_certificate /etc/ssl/localhost.pem;
     ssl_certificate_key /etc/ssl/localhost-key.pem;
 
-    root /var/www/backend/public;
+    root /var/www/public;
     index index.php index.html;
 
     charset utf-8;
